FIX : Ajout list synchronisée sur convertisseurs json